[package]
name = "two"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "macros"] }
hypr = "0.0.1"
serde = { version = "1.0.219", features = ["derive"] }
solana-cli-config = "2.2.18"
solana-client = "2.2.18"
solana-sdk = "2.2.18"
solana-transaction-context = "2.2.18"
solana-transaction-status = "2.2.18"
solana-transaction-status-client-types = "2.2.18"
tokio = { version = "1.45.1", features = ["full"] }
